# python-version-controller

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  pyproject.toml  tox.toml
.github/workflows/: code-quality.yml  pypi-publish.yml
pyvc/: __init__.py  __main__.py  bump.py  cli.py  main.py  semver.py
pyvcc/: semver.py
tests/bump/: conftest.py  test_breaking_change.py  test_bump_version.py
tests/cli/: test_cli.py
tests/semver/: conftest.py  test_breaking_change.py  test_bump_version.py
