[project]
name = "python-version-controller"
version = "0.1.1"
description = "PyVC python version controller using conventional commits"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "structlog>=25.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "rich>=14.0.0",
]
