[project]
name = "python-version-controller"
version = "0.1.1"
description = "PyVC python version controller using conventional commits"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "structlog>=25.3.0",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.8.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "rich>=14.0.0",
]
